<resources>
    <string name="app_name">FakeDefender 手机管家</string>
    <string name="btn_run">开始监测</string>
    <string name="btn_terminate">结束监测</string>
    <string name="btn_history">查看完整历史记录</string>
    <string name="tx_current_running">当前已运行</string>
    <string name="tx_placeholder">--</string>
    <string name="tx_hour">小时</string>
    <string name="tx_minute">分</string>
    <string name="tx_second">秒</string>
    <string name="tx_toolbox">工具箱</string>
    <string name="tx_screen_monitoring">屏幕监测服务</string>
    <string name="tx_check_record">检测记录</string>
    <string name="check_result">检测结果</string>
    <string name="check_return">返回</string>
    <string name="tx_upload">图片检测</string>
    <string name="tx_settings">设置</string>
    <string name="please_login">请登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="tx_username_hint">请输入电子邮箱</string>
    <string name="tx_password_hint">请输入密码</string>
    <string name="go_register">没有账号？点击注册</string>
    <string name="tx_repeat_password">重复密码</string>
    <string name="tx_go_login">已有账号？点击登录</string>
    <string name="btn_register">注册</string>
    <string name="tx_register_password">密码</string>
    <string name="tx_verification_code">验证码</string>
    <string name="tx_login_success">登陆成功</string>
    <string name="tx_login_fail">登陆失败，请检查电子邮箱和密码</string>
    <string name="tx_register_success">注册成功</string>
    <string name="email">电子邮箱</string>
    <string name="tx_register_fail">该邮箱已经存在</string>
    <string name="tx_password_not_match">两次输入的密码不一致</string>
    <string name="tx_password_not_strong">密码强度不足，长度必须大于八位</string>
    <string name="tx_email_invaild">请输入合法的邮箱地址</string>
    <string name="tx_settings_title">FakeDefender 设置</string>
    <string name="tx_advance_settings">高级设置</string>
    <string name="tx_check_period">监测周期</string>
    <string name="tx_ms">毫秒</string>
    <string name="btn_settings_save">保存</string>
    <string name="tx_checking">图片检测中，请稍后</string>
    <string name="tx_check_result_title">检测结果</string>
    <string name="tx_preview">预览</string>
    <string name="btn_result_save">保存到相册</string>
    <string name="tx_check_threshold">判伪阈值</string>
    <string name="tx_check_threshold_hint">范围为0到1</string>
    <string name="tx_high_threshold">高</string>
    <string name="tx_middle_threshold">中</string>
    <string name="tx_low_threshold">低</string>
    <string name="tx_long_period">长</string>
    <string name="tx_middle_period">中</string>
    <string name="tx_short_period">短</string>
    <string name="tx_settings_saved">设置已保存</string>
    <string name="tx_saved_result">已保存到相册</string>
    <string name="tx_high_risk">[高风险]</string>
    <string name="tx_middle_risk">[中风险]</string>
    <string name="tx_low_risk">[低风险]</string>
    <string name="tx_manual">[手动]</string>
    <string name="tx_auto">[自动]</string>
    <string name="warning">检测到虚假人脸环境，点击查看详情</string>
    <string name="monitor_running">FakeDefender屏幕监测服务运行中</string>
</resources>