<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp" >

    <TextView
        android:id="@+id/tx_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_settings_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"/>


    <LinearLayout
        android:id="@+id/layout_advance_settings"
        android:layout_below="@id/tx_settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:background="@color/transparent_white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_advance_settings"
            android:textSize="16sp"
            android:textColor="@color/gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:text="@string/tx_check_period"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_long_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_long_period"/>

            <RadioButton
                android:id="@+id/rb_middle_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_middle_period"/>

            <RadioButton
                android:id="@+id/rb_short_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_short_period"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/tx_check_threshold"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >
            <RadioButton
                android:id="@+id/rb_high_threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_high_threshold"/>

            <RadioButton
                android:id="@+id/rb_middle_threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_middle_threshold"/>

            <RadioButton
                android:id="@+id/rb_low_threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_low_threshold"/>
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_settings"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="50dp"
        android:background="@drawable/btn_blue"
        android:text="@string/btn_settings_save"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

</RelativeLayout>